--- a/_config.yml
+++ b/_config.yml
@@ -265,3 +265,13 @@ defaults:
       share: true
       related: true
       show_date: true
+  # _pages
+  - scope:
+      path: "_pages"
+      type: pages
+    values:
+      layout: single
+      author_profile: true
+      comments: true
+      show_date: true
+    
