--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -15,6 +15,6 @@ mhagnumdw:
   avatar: "https://avatars2.githubusercontent.com/u/17688846?s=460&v=4"
   url:
 unknown:
-  name: Unknown
-  avatar:
-  url:
+  name: "Mun Soo Kim"
+  avatar: 
+  url: "https://github.com/anstn1993"
