--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,13 +1,13 @@
 # Icons on the footer
 rss: true
-email_address:    # Full email address, e.g. "sam@example.com"
+email_address: anstn1993@gmail.com   # Full email address, e.g. "sam@example.com"
 behance:
 bitbucket:
 dribbble:
 facebook:
 flickr:
 gitlab:
-github: "sylhare"
+github: "anstn1993"
 instagram:
 keybase:
 linkedin:         # Full URL
