completed initial setting

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -14,7 +14,7 @@ mhagnumdw:
   name: Mhagnumdw
   avatar: "https://avatars2.githubusercontent.com/u/17688846?s=460&v=4"
   url:
-unknown:
+munsookim:
   name: "Mun Soo Kim"
   avatar: 
   url: "https://github.com/anstn1993"
