--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ baseurl: ""
 url: "https://anstn1993.github.io"
 
 # THEME-SPECIFIC CONFIGURATION
-title: MunSooKim's dev blog                                    # site's title
+title: MunSooKim's devlog                                    # site's title
 description: "일상, 회고, 개발 지식을 기록하기 위한 공간 입니다."      # used by search engines
 avatar: assets/img/triangle.png                         # Empty for no avatar in navbar
 favicon: assets/favicon.ico                             # Icon displayed in the tab
